--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
       </div>
     </div>
-    <script src="./showdown.min.js" charset="utf-8"></script>
+    <script src="./showdown.js" charset="utf-8"></script>
     <script src="./script.js" charset="utf-8"></script>
   </body>
 </html>
