--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
       <div class="text">
 
       </div>
+      <div class="text text2">
+
+      </div>
     </div>
     <script src="./showdown.js" charset="utf-8"></script>
     <script src="./script.js" charset="utf-8"></script>
