--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="./askreddit.png">
   </head>
   <body>
-    <div class="q">
+    <div class="q" onclick="play()">
       <div class="qtop">
         <img src="askreddit.png" id="logo">
         <div class="qtopText">
