--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <title></title>
     <link rel="stylesheet" href="./master.css">
     <meta name="viewport" content="width=device-width">
-    <link rel="manifest" href="/manifest.webapp">
     <link rel="icon" type="image/png" sizes="32x32" href="./askreddit.png">
   </head>
   <body>
@@ -38,6 +37,7 @@
 
       </div>
     </div>
+    <script src="./NoSleep.min.js" charset="utf-8"></script>
     <script src="./showdown.js" charset="utf-8"></script>
     <script src="./script.js" charset="utf-8"></script>
   </body>
