--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="./askreddit.png">
   </head>
   <body>
-    <div class="q" onclick="play()">
+    <div class="q" onclick="start()">
       <div class="qtop">
         <img src="askreddit.png" id="logo">
         <div class="qtopText">
@@ -37,6 +37,9 @@
 
       </div>
     </div>
+    <audio src="./bgmfv.mp3" loop>
+
+    </audio>
     <script src="./showdown.js" charset="utf-8"></script>
     <script src="./script.js" charset="utf-8"></script>
   </body>
